[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["SeonHyungJo <seonhyung.jo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.33", features = ['console'] }